tests/expectations/parser/functions/spaced_annotation_fail.out
Error [EPAR0370024]: Illegal spacing in the annotation declaration.
    --> test:3:5
     |
   3 |     @ test
     |     ^^^^^^
     |
     = Remove whitespace between the `@` symbol and the identifier.